Fix /r/GetMotivated on small viewports

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   padding-right: 0px !important;
 }
 .content[role="main"] {
+  clear: left;
   margin-right: 5px !important;
   max-width: none !important;
   overflow: hidden !important;
